--- a/en/index.html
+++ b/en/index.html
@@ -109,8 +109,8 @@
                           <option value="Algerian">Algerian</option>
                           <option value="Sudanese">Sudanese</option>
                           <option value="Iraqi">Iraqi</option>
-                          <option value="ليبي">Libyan</option>
-                          <option value="مغربي">مغربي</option>
+                          <option value="Libyan">Libyan</option>
+                          <option value="Moroccan">Moroccan</option>
                           <option value="Tunisian">Tunisian</option>
                           <option value="Other Nationality">Other Nationality</option>
                         
